2001-03-21  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/fvwm.c (MappedNotOverride):
	* fvwm/builtins.c (RecaptureWindow):
	(Recapture):
	(do_recapture):
	* fvwm/fvwm.c (Reborder):
	(CaptureOneWindow):
	(hide_screen):
	(CaptureAllWindows):
	functions moved to add_window.c

	* fvwm/session.c (RestartInSession):
	fixed windows travelling upon restart with outdated session state file

2001-03-19  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/builtins.c (button_states):
	fixed core dump

	* fvwm/events.c (HandleUnmapNotify):
	call XSync() after releasing a client window

2001-03-18  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/borders.c (RedrawTitle):
	(RedrawButtons):
	(DrawButton):
	(draw_clipped_decorations):
	vastly improved speed of window motion with pixmap backgrounds in
	titles and buttons
	(get_button_state):
	removed debug statement

	* fvwm/builtins.c (ReadTitleButton):
	* fvwm/fvwm.c (DestroyAllButtons):
	(ResetAllButtons):
	* fvwm/borders.c (get_button_state):
	renamed button states

	* sample.fvwmrc/system.fvwm2rc-sample-2:
	* sample.fvwmrc/system.fvwm2rc-sample-1:
	* sample.fvwmrc/system.fvwm2rc:
	* sample.fvwmrc/decor_examples:
	* sample.fvwmrc/new-features:
	converted to new config file format

	* fvwm/builtins.c (SetGlobalOptions):
	cleaned up parsing, save some bytes

	* libs/Parse.c (ParseToggleArgument):
	allow '1' and '0' as toggling arguments

	* fvwm/builtins.c (ReadTitleButton):
	cleaned up parsing
	prevent unnecessary multiple parsing

	* fvwm/menus.c (MenuInteraction):
	fixed menus no longer popping up or down under certain circumstances
	(MenuInteraction):
	small performance enhancement for non animated menus
	removed old debug statements

2001-03-17  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/events.c:
	initialise PressedW with "None"
	(HandleButtonPress):
	do not redraw decoration when an unbound mouse button is used

2001-03-14  Mikhael Goikhman  <migo@homemail.com>

	* fvwm/session.c (MatchWinToSM):