@@ -1,3 +1,8 @@
+2001-03-22  Dominik Vogt  <dominik.vogt@gmx.de>
+
+	* purify/purify.fvwm2rc:
+	more gradient tests
+
 2001-03-14  Dominik Vogt  <dominik.vogt@gmx.de>
 
 	* FvwmButtons/FvwmButtons.sh:
