@@ -1,3 +1,14 @@
+2001-03-22  Dominik Vogt  <dominik.vogt@gmx.de>
+
+	* libs/Graphics.c (ParseGradient):
+	added an error message if number of gradient segments does not match
+	the given number of colours and percentages
+	(ParseGradient):
+	(CreateGradientPixmapFromString):
+	improved error messages
+	(ParseGradient):
+	small parsing fixes
+
 2001-03-21  Dominik Vogt  <dominik.vogt@gmx.de>
 
 	* fvwm/fvwm.c (MappedNotOverride):
